--- a/myblog/package.json
+++ b/myblog/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.0.17",
     "morgan": "^1.9.0",
     "path": "^0.12.7",
+    "query-string": "^6.1.0",
     "serve-favicon": "^2.5.0"
   }
 }
