--- a/myblog/package.json
+++ b/myblog/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.15.6",
     "formidable": "^1.2.1",
     "http-errors": "~1.6.2",
+    "markdown-to-html": "0.0.13",
     "moment": "^2.22.1",
     "mongoose": "^5.0.17",
     "morgan": "^1.9.0",
